<resources>
    <string name="app_name">Miclabs</string>
    <string name="mapbutton">Mapbutton</string>
    <string name="employeebutton">EmployeeButton</string>
    <string name="contactbutton">ContactButton</string>
    <string name="titleview">TitleView</string>
    <string name="button">Button</string>
    <string name="contact">Contact</string>
    <string name="employe">Liste des Employés</string>
    <string name="map">Localisation du robot</string>
    <string name="profile_picture">Profile_picture</string>
    <string name="Employee_name">Nom</string>
    <string name="Employee_first_name">Prénom</string>
    <string name="infraction_counter">Nombre infractions</string>
    <string name="chief_contact">Personne à contacter</string>
    <string name="employee_id">Id</string>
    <string name="basic_mail_adress">adresse@mail.com</string>
    <string name="robotlocalisation">RobotLocalisation</string>
    <string name="mail_box_example">mail_box_photo</string>
</resources>